# rosu-pp-py

./: Cargo.toml  README.md  pyproject.toml
src/: calculator.rs  difficulty.rs  lib.rs  strains.rs
src/attributes/: difficulty.rs
