[package]
name = "rosu-pp-py"
version = "1.0.2"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "TuRou"]
license = "MIT"
edition = "2021"

[lib]
name = "rosu_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
rosu-pp = { git = "https://github.com/ppy-sb/rosu-pp" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
